Initial Commit. Adopter-Registration Frontend Work

--- a/modules/admin-ui/src/main/webapp/index.html
+++ b/modules/admin-ui/src/main/webapp/index.html
@@ -335,6 +335,7 @@
     <script src="scripts/modules/events/validators/schedulingAuthorizedValidator.js"></script>
     <script src="scripts/modules/recordings/controllers/recordingController.js"></script>
     <script src="scripts/modules/recordings/controllers/recordingsController.js"></script>
+    <script src="scripts/modules/registration/controllers/registrationController.js"></script>
     <script src="scripts/modules/users/controllers/usersController.js"></script>
     <script src="scripts/modules/users/controllers/userController.js"></script>
     <script src="scripts/modules/users/controllers/groupsController.js"></script>
