--- a/modules/admin-ui-frontend/app/index.html
+++ b/modules/admin-ui-frontend/app/index.html
@@ -62,8 +62,8 @@
           </ul>
         </div>
 
-        <div ng-if="documentationUrl || restdocsUrl" title="{{ 'HELP.HELP' | translate}}" class="nav-dd"
-                                                                                          id="help-dd" old-admin-ng-dropdown="">
+        <div ng-if="documentationUrl || restdocsUrl" title="{{ 'HELP.HELP' | translate}}"
+             class="nav-dd" id="help-dd" old-admin-ng-dropdown="">
           <div class="fa fa-question-circle"></div>
           <ul class="dropdown-ul">
             <li ng-if="documentationUrl">
@@ -78,6 +78,9 @@
             </li>
             <li>
               <a translate="HELP.HOTKEY_CHEAT_SHEET" ng-click="showHotkeyCheatSheet()"></a>
+            </li>
+            <li with-role="ROLE_ADMIN">
+              <a translate="HELP.ADOPTER_REGISTRATION" ng-click="showAdopterRegistrationModal()"></a>
             </li>
           </ul>
         </div>
@@ -231,6 +234,8 @@
     <script src="scripts/shared/resources/themesResource.js"></script>
     <script src="scripts/shared/resources/newThemeResource.js"></script>
     <script src="scripts/shared/resources/taskResource.js"></script>
+    <script src="scripts/shared/resources/adopterRegistrationResource.js"></script>
+    <script src="scripts/shared/resources/countryResource.js"></script>
     <script src="scripts/shared/services/wizards/new-event/access.js"></script>
     <script src="scripts/shared/services/wizards/new-event/metadata.js"></script>
     <script src="scripts/shared/services/wizards/new-event/metadataExtended.js"></script>
@@ -337,6 +342,8 @@
     <script src="scripts/modules/events/validators/schedulingAuthorizedValidator.js"></script>
     <script src="scripts/modules/recordings/controllers/recordingController.js"></script>
     <script src="scripts/modules/recordings/controllers/recordingsController.js"></script>
+    <script src="scripts/modules/registration/controllers/registrationController.js"></script>
+    <script src="scripts/modules/registration/services/states.js"></script>
     <script src="scripts/modules/users/controllers/usersController.js"></script>
     <script src="scripts/modules/users/controllers/userController.js"></script>
     <script src="scripts/modules/users/controllers/groupsController.js"></script>
